<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.lakhan.lapitchatapp.StartActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/welcome"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/common_google_signin_btn_text_dark_default"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/to"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/chit_chat_app"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="30sp" />

    <Button
        android:id="@+id/ButtonStart"
        android:layout_width="250dp"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/need_an_account"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="250dp"
        android:layout_height="66dp"
        android:layout_above="@+id/ButtonStart"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:text="@string/already_a_user"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />
</RelativeLayout>
